--- a/kontakt.html
+++ b/kontakt.html
@@ -1,1 +1,1 @@
-<h3>If you have some security questions please contact us: 069 777 666</h3>
+<h3>If you have some security questions please contact us: 386 69 777 666</h3>
